Add background images
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/HP-Virt-Tuning-Opt-2014/index.html
+++ b/presentations/HP-Virt-Tuning-Opt-2014/index.html
@@ -45,24 +45,22 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
-					<h3>Virtualization Tuning &amp; Optimization</h3>
-					<p>Alex Williamson / <font color=#cc0000>alex.williamson@redhat.com</font></p>
+				<section data-state="logo-light" data-background-image="../images/RH-Template-Background8.jpg">
+					<h3><font color=#ffffff>Virtualization Tuning &amp; Optimization</font></h3>
+					<p>
+						<font color=#d0d0d0>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#ff0000>alex.williamson@redhat.com</font></a>
+					</p>
+				</section>
+				<section data-state="logo-light" data-background-image="../images/RH-Template-Background3.jpg">
+						<h2><font color=#ffffff>Agenda</font></h2>
+						<p><font color=#ffffff>Device types</font></p>
+						<p><font color=#ffffff>Disk types</font></p>
+						<p><font color=#ffffff>Tuning &amp; Optimization</font></p>
+						<p><font color=#ffffff>Graphics</font></p>
 				</section>
 				<section>
-						<h2>Agenda</h2>
-						<div align=left>
-						<ul>
-							<li>Device types</li>
-							<li>Disk types</li>
-							<li>Tuning</li>
-							<li>Graphics</li>
-						</ul>
-						</div>
-				</section>
-				<section>
-					<section>
-						<h2>Device Types</h2>
+					<section data-state="logo-light" data-background-image="../images/RH-Template-Background9.jpg">
+						<h2><font color=#ffffff>Device Types</font></h2>
 					</section>
 					<section>
 						<h3>Emulated Devices</h3>
@@ -155,8 +153,8 @@
 					</section>
 				</section>
 				<section>
-					<section>
-						<h2>Disk Types</h2>
+					<section data-state="logo-light" data-background-image="../images/RH-Template-Background9.jpg">
+						<h2><font color=#ffffff>Disk Types</font></h2>
 					</section>
 					<section>
 						<h3>QCOW2</h3>
@@ -259,8 +257,8 @@
 					</section>
 				</section>
 				<section>
-					<section>
-						<h2>VM Tuning</h2>
+					<section data-state="logo-light" data-background-image="../images/RH-Template-Background9.jpg">
+						<h2><font color=#ffffff>Tuning &amp; Optimization</font></h2>
 					</section>
 					<section>
 						<h3>Remove Unused Devices</h3>
@@ -376,8 +374,8 @@
 					</section>
 				</section>
 				<section>
-					<section>
-						<h2>VM Graphics</h2>
+					<section data-state="logo-light" data-background-image="../images/RH-Template-Background9.jpg">
+						<h2><font color=#ffffff>Graphics</font></h2>
 					</section>
 					<section>
 						<h3>Emulated</h3>
@@ -424,11 +422,11 @@
 						</ul>
 					</section>
 				</section>
-				<section>
-						<h2>Resources</h2>
+				<section data-state="logo-dark" data-background-image="../images/RH-Template-Background4.jpg">
+						<h2><font color=#000000>Resources</font></h2>
 						<ul>
-							<li>This talk:<br><small><a href="http://awilliam.github.io/presentations/HP-Virt-Tuning-Opt-2014">http://awilliam.github.io/presentations/HP-Virt-Tuning-Opt-2014</a></small></li>
-							<li>Red Hat Virtualization Tuning and Optimization Guide:<br><small><a href="https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/Virtualization_Tuning_and_Optimization_Guide">https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/Virtualization_Tuning_and_Optimization_Guide</a></small></li>
+							<li><font color=#000000>This talk:</font><br><small><a href="http://awilliam.github.io/presentations/HP-Virt-Tuning-Opt-2014">http://awilliam.github.io/presentations/HP-Virt-Tuning-Opt-2014</a></small></li>
+							<li><font color=#000000>Red Hat Virtualization Tuning and Optimization Guide:</font><br><small><a href="https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/Virtualization_Tuning_and_Optimization_Guide">https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/Virtualization_Tuning_and_Optimization_Guide</a></small></li>
 						</ul>
 				</section>
 				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="70%">
