--- a/presentations/HP-Virt-Tuning-Opt-2014/index.html
+++ b/presentations/HP-Virt-Tuning-Opt-2014/index.html
@@ -299,7 +299,7 @@
 								<li>RHEL7 supports Transparent Huge Pages (THP) (default)</li>
 								<li>Static huge pages can be used for:</li>
 								<ul>
-									<li>Consitent huge page performance</li>
+									<li>Consistent huge page performance</li>
 									<li>Huge pages with device assignment</li>
 								</ul>
 							</ul>
@@ -325,7 +325,7 @@
 							<li>Pick the appropriate device model for your requirements</li>
 							<li>Bridge tuning</li>
 							<ul>
-								<li>Enable expiermental zero-copy transmit</li>
+								<li>Enable experimental zero-copy transmit</li>
 								<li>/etc/modprobe.d:</li>
 							</ul>
 								<div style="width:70%; margin-left:15%">
