Dumped in redhat.scss from previous presentations, ran:
npm install
grunt css-themes

Grabbed latest backgrounds.  Edited to basic title/end slides

Previous commit created via

git remote update reveal.js
git subtree add -P ./presentations/KVM-Forum-2016 reveal.js master

Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2016/index.html
+++ b/presentations/KVM-Forum-2016/index.html
@@ -4,10 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>KVM Forum 2016: An Introduction to PCI Device Assignment with VFIO</title>
+		<meta name="description" content="An Introduction to PCI Device Assignment with VFIO"/>
+		<meta name="author" content="Alex Williamson"/>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/redhat.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -23,9 +25,25 @@
 	</head>
 	<body>
 		<div class="reveal">
+			<a id="logo-white"><img src="../images/Red_Hat_RGB_reverse.png" alt=""/></a>
+			<a id="logo-black"><img src="../images/Red_Hat_RGB.png" alt=""/></a>
+
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-state="logo-light" data-background-image="../images/1574736-corporate-1.svg">
+					<div style="width:130%; margin-left:-15%">
+						<h2><font color=#ffffff>An Introduction to PCI Device Assignment with VFIO</font></h2>
+						<p>
+							<font color=#d0d0d0>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#d0d0d0>alex.williamson@redhat.com</font></a>
+						</p>
+					</div>
+				</section>
+
+				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="70%">
+					<div style="margin-top:40%">
+						<p><font color=#000000>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#cc0000>alex.williamson@redhat.com</font></a></p>
+					</div>
+				</section>
+
 			</div>
 		</div>
 
