--- a/presentations/KVM-Forum-2016/index.html
+++ b/presentations/KVM-Forum-2016/index.html
@@ -565,6 +565,12 @@ DESCRIPTION
 			Reveal.initialize({
 				history: true,
 
+				multiplex: {
+					secret: null, // null so the clients do not have control of the master presentation
+					id: '2667d6cbdd4ba405', // id, obtained from socket.io server
+					url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of socket.io server
+				},
+
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
@@ -572,7 +578,9 @@ DESCRIPTION
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/svg-fragment/reveal-svg-fragment.js',
-					  condition: function() { return !!document.querySelector( '[data-svg-fragment]' ); } }
+					  condition: function() { return !!document.querySelector( '[data-svg-fragment]' ); } },
+					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
+					{ src: 'plugin/multiplex/client.js', async: true }
 				]
 			});
 			//Reveal.configure({
