--- a/presentations/KVM-Forum-2016/index.html
+++ b/presentations/KVM-Forum-2016/index.html
@@ -121,7 +121,7 @@
 						<h2><font color=#ffffff>How does VFIO work?</font></h2>
 					</section>
 					<section data-state="logo-dark" data-background-image="../images/1403716-greybackground.svg">
-						<h3>VFIO provides acccess to a device within a secure and programmable IOMMU context</h3>
+						<h3>VFIO provides access to a device within a secure and programmable IOMMU context</h3>
 					</section>
 					<section data-state="logo-dark" data-background-image="../images/1403716-greybackground.svg">
 						<h3>Let's start with the device</h3>
@@ -496,8 +496,10 @@ DESCRIPTION
 						<font color=#ffffff>
 						<ul>
 							<li><font color=#e0e0e0>Sandy Bridge+: "Legacy" mode</font></li>
+							<ul>
+								<li><font color=#e0e0e0>Host: Linux v4.6+, QEMU 2.7+</font></li>
+							</ul>
 							<li><font color=#e0e0e0>Broadwell+: Universal Passthrough (UPT) mode</font></li>
-							<li><font color=#e0e0e0>Host: Linux v4.6+, QEMU 2.7+</font></li>
 							<li><font color=#e0e0e0>See <a href="http://vfio.blogspot.com"><font color=#a0a0a0>http://vfio.blogspot.com</font></a> for details</font></li>
 						</ul>
 						</font>
@@ -544,15 +546,13 @@ DESCRIPTION
 						</font>
 					</section>
 				</section>
-				<section>
-					<section data-state="logo-light" data-background-image="../images/1748149-epic-building-1-red.png">
-						<h2><font color=#ffffff>Questions?</font></h2>
-					</section>
-					<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="70%">
-						<div style="margin-top:40%">
-							<p><font color=#000000>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#cc0000>alex.williamson@redhat.com</font></a></p>
-						</div>
-					</section>
+				<section data-state="logo-light" data-background-image="../images/1748149-epic-building-1-red.png">
+					<h2><font color=#ffffff>Questions?</font></h2>
+				</section>
+				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="70%">
+					<div style="margin-top:40%">
+						<p><font color=#000000>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#cc0000>alex.williamson@redhat.com</font></a></p>
+					</div>
 				</section>
 			</div>
 		</div>
@@ -565,11 +565,11 @@ DESCRIPTION
 			Reveal.initialize({
 				history: true,
 
-				multiplex: {
-					secret: null, // null so the clients do not have control of the master presentation
-					id: '2667d6cbdd4ba405', // id, obtained from socket.io server
-					url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of socket.io server
-				},
+				//multiplex: {
+					//secret: null, // null so the clients do not have control of the master presentation
+					//id: null, // id, obtained from socket.io server
+					//url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of socket.io server
+				//},
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
@@ -577,10 +577,11 @@ DESCRIPTION
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					// { src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
+					// { src: 'plugin/multiplex/client.js', async: true }
+					// { src: 'plugin/multiplex/master.js', async: true },
 					{ src: 'plugin/svg-fragment/reveal-svg-fragment.js',
-					  condition: function() { return !!document.querySelector( '[data-svg-fragment]' ); } },
-					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
-					{ src: 'plugin/multiplex/client.js', async: true }
+					  condition: function() { return !!document.querySelector( '[data-svg-fragment]' ); } }
 				]
 			});
 			//Reveal.configure({
