--- a/presentations/KVM-Forum-2016/index.html
+++ b/presentations/KVM-Forum-2016/index.html
@@ -543,6 +543,8 @@ DESCRIPTION
 							<li><a href="https://www.redhat.com/mailman/listinfo/vfio-users"><font color=#d0d0d0>vfio-users mailing list</font></a></li>
 							<li><font color=#e0e0e0>#vfio-users on freenode</font></li>
 						</ul>
+						<p>&nbsp;</p>
+						<p><a href="http://awilliam.github.io/presentations/KVM-Forum-2016/#/"><font color=#d0d0d0>http://awilliam.github.io/presentations/KVM-Forum-2016</font></a><p>
 						</font>
 					</section>
 				</section>
