Wrap-up mentioning MemoryListeners and quick summary
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2016/index.html
+++ b/presentations/KVM-Forum-2016/index.html
@@ -479,9 +479,27 @@ DESCRIPTION
 								<li>DMA is guest physical</li>
 								<li>Host IOMMU maps guest physical to host physical</li>
 							</ul>
+							<li>Accomplished through QEMU MemoryListeners</li>
 						</ul>
 					</section>
-					<section data-state="logo-dark" data-background-image="../images/whitebackground.svg">
+					<section data-state="logo-dark" data-background-image="../images/1574743-corporate-2.svg">
+						<h3>Summary</h3>
+						<ul>
+							<li>How does the guest program a device?</li>
+							<ul>
+								<li>MemoryRegions</li>
+							</ul>
+							<li>How does a device signal the guest?</li>
+							<ul>
+								<li>EventNotifiers</li>
+							</ul>
+							<li>How does a device transfer data?</li>
+							<ul>
+								<li>MemoryListeners</li>
+							</ul>
+						</ul>
+					</section>
+					<section data-state="logo-dark" data-background-image="../images/1574743-corporate-2-white.svg">
 						<h3>PCI Device assignment with VFIO</h3>
 						<h4>The Complete Picture</h4>
 						<a><img data-src="./images/vfio-to-qemu.svg" style="background:none; border:none; box-shadow:none;"></a>
