--- a/presentations/LinuxCon-Beijing-2018/index.html
+++ b/presentations/LinuxCon-Beijing-2018/index.html
@@ -4,10 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>LinuxCon Beijing 2018: VFIO Device Assignment Quirks, and how to avoid them in your hardware</title>
+
+		<meta name="description" content="LinuxCon Beijing 2018: VFIO Device Assignment Quirks, and how to avoid them in your hardware"/>
+		<meta name="author" content="Alex Williamson"/>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/redhat.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -23,9 +26,39 @@
 	</head>
 	<body>
 		<div class="reveal">
+			<a id="logo-white"><img src="images/Red_Hat_RGB_reverse.png" alt=""/></a>
+			<a id="logo-black"><img src="images/Red_Hat_RGB.png" alt=""/></a>
+
+			<header style="position:absolute; left:10%; top:10%; z-index:100; font-size:1.55em"></header>
+
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-state="logo-light" data-background-image="images/1748153-epic-building-2.png">
+					<p>&nbsp;</p>
+					<p align="center" style="font-size:60px"><b><font color=#ffffff>VFIO Device Assignment Quirks</font></b></p>
+					<p align="center" style="font-size:40px"><font color=#ffffff>...and how to avoid them in your hardware</font></p>
+					<p>&nbsp;</p>
+					<p align="center" style="font-size:30px"><font color=#d0d0d0>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#d0d0d0>alex.williamson@redhat.com</font></a></p>
+				</section>
+
+<!--
+ - Requester ID, are you who you say you are?
+ - Device reset
+ - Register alignment, particularly for MSI-X and sub-page BARs
+ - Non-standard interrupt programming, config space and BAR backdoors
+ - Discrete vs integrated devices
+ - Device isolation (of course)
+Maybe start out with IOMMUs, what they mean to device assignment, and
+what parts of a device need to be virtualized.
+-->
+				<section>
+
+				</section>
+
+				<section data-state="logo-none" data-background-image="images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="70%">
+					<div style="margin-top:40%">
+						<p><font color=#000000>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#cc0000>alex.williamson@redhat.com</font></a></p>
+					</div>
+				</section>
 			</div>
 		</div>
 
@@ -37,6 +70,7 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				slideNumber: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
