Update presentation index
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -1,6 +1,14 @@
 <html>
 <body>
 <ul>
+	<li>2018</li>
+	<ul>
+		<li><a href="./LinuxCon-Beijing-2018/">LinuxCon Beijing 2018 - VFIO Device Assignment Quirks, and how to avoid them in your hardware</a></li>
+	</ul>
+	<li>2016</li>
+	<ul>
+		<li><a href="./KVM-Forum-2016/">KVM Forum 2016 - An Introduction to PCI Device Assignment with VFIO</a></li>
+	</ul>
 	<li>2014</li>
 	<ul>
 		<li><a href="./KVM-Forum-2014/">KVM Forum 2014 - VFIO, OVMF, GPU, and You</a></li>
